--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "spotify-api-wrapper",
   "version": "1.0.0",
   "description": "\"# Spotify API Wrapper\"",
-  "main": "index.js",
+  "main": "lib/index.js",
   "files": [
     "lib/**/*"
   ],
   "directories": {
     "lib": "lib"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.21.0",
+    "query-string": "^6.13.7"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
@@ -23,10 +26,8 @@
     "build": "tsc",
     "test": "jest --config .jestconfig.json",
     "lint": "eslint -c .eslintrc.json src/",
-
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
-    
     "preversion": "npm run lint",
     "version": "git add -p src",
     "postversion": "git push && git push --tags"
